# SPIRE

./: .gitignore  CMakeLists.txt  LICENSE_PNG.txt  Makefile  README.md  auxiliary.hpp  batch_lib.cpp  batch_lib.hpp  batch_tool.cpp  distance_transform.cpp  distance_transform.hpp  drawme.cpp  drawme.hpp  get_channel_proportions.cpp  global_settings.conf  global_settings.hpp  homotopic_thinning.cpp  homotopic_thinning.hpp  img_out.cpp  img_out.hpp  iterable_voxel.cpp  iterable_voxel.hpp  level_sets.cpp  level_sets.hpp  lookuptable_builder.cpp  main.cpp  minimal_terminal.cpp  percolation_analysis.cpp  percolation_analysis.hpp  qt_gui.cpp  qt_gui.hpp  qt_main.cpp  qt_sp.cpp  qt_sp.hpp  resources.qrc  slice_orientation_visualisation.cpp  slice_orientation_visualisation.hpp  sp_app.cpp  sp_app.h  sp_gui.cpp  (+12 more)
ext_libs/iml-1.0.5/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config-h.in  configure  configure.ac
ext_libs/iml-1.0.5/config/: Makefile.am  Makefile.in  atlas-check.m4  cblas-check.m4  default-path.m4  gmp-check.m4  verbose-mode.m4
ext_libs/iml-1.0.5/doc/: Makefile.am  Makefile.in  liblink  libroutines
ext_libs/iml-1.0.5/examples/: Makefile.am  Makefile.in  exam-certsolve.c  exam-kernel.c  exam-nonsingsolv.c  readme
ext_libs/iml-1.0.5/src/: Makefile.am  Makefile.in  basisop.c  certsolve.c  common.h  iml.h  latreduce.c  latreduce.h  memalloc.c  mtrans.c  nonsysolve.c  nullspace.c  nullspace.h  padiclift.c  padiclift.h
ext_libs/iml-1.0.5/tests/: Makefile.am  Makefile.in
gui/: sp_gui.fbp
licenses/: LICENSE_MINGW.txt  LICENSE_ZLIB.txt  LICENSE_mBSD.txt
resources/licenses/: LICENSE_GPLv2.txt
src/: auxiliary.hpp  batch_lib.cpp  batch_lib.hpp  batch_tool.cpp  distance_transform.hpp  get_channel_proportions.cpp  global_settings.hpp  homotopic_thinning.cpp  homotopic_thinning.hpp  img_manip.cpp  img_manip.hpp  img_out.cpp  iterable_voxel.hpp  level_sets.cpp  level_sets.hpp  minimal_terminal.cpp  percolation_analysis.cpp  qt_gui.cpp  qt_gui.hpp  qt_main.cpp  qt_sp.hpp  surface_areas_tables.hpp  surface_projection.cpp  surface_projection.hpp
